--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 spring:
   shardingsphere:
     datasource:
-      names: ds0,ds1
-      ds0:
-        url: jdbc:mysql://localhost:3306/edu_db_1?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8
+      names: m0,s0
+      m0:
+        url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8
         driver-class-name: com.mysql.cj.jdbc.Driver
         username: root
         password: 123456
         type: com.alibaba.druid.pool.DruidDataSource
-      ds1:
-        url: jdbc:mysql://localhost:3306/edu_db_2?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8
+      s0:
+        url: jdbc:mysql://localhost:3307/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8
         driver-class-name: com.mysql.cj.jdbc.Driver
         username: root
         password: 123456
@@ -17,27 +17,31 @@ spring:
 
     sharding:
       tables:
-        course:
-          actual-data-nodes: ds$->{0..1}.course_$->{1..2}
+        user:
+          actual-data-nodes: ds0.user
           key-generator:
-            # 指定cid生成策略
-            column: cid
+            # 指定生成策略
+            column: user_id
             type: SNOWFLAKE
-          # 指定分表策略，约定cid值偶数添加到course_1，cid为奇数添加到course_2
-          table-strategy:
-            inline:
-              sharding-column: cid
-              algorithm-expression: course_$->{cid % 2 + 1}
-          # 指定分库策略，约定user_id值偶数添加到edu_db_1，user_id为奇数添加到edu_db_2
-          database-strategy:
-            inline:
-              sharding-column: user_id
-              algorithm-expression: ds$->{user_id % 2}
+      master-slave-rules:
+        ds0:
+#          primary-data-source-name: m0
+          master-data-source-name: m0
+#          replica-data-source-names: s0
+          slave-data-source-names: s0
+          load-balance-algorithm-type: ROUND_ROBIN
+
 
     # 打开SQL输出日志
     props:
       sql:
         show:
           true
+#    masterslave:
+#      name: ds0
+#      master-data-source-name: m0
+#      slave-data-source-names: s0
+#      load-balance-algorithm-type: ROUND_ROBIN
+
 #  main:
 #    allow-bean-definition-overriding: true
